--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <title>Maanya & Shreyansh's Journey</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 <body>
+    <!-- Autoplay Audio -->
+    <audio autoplay muted loop>
+      <source src="your-audio-file.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+
     <div class="container">
         <!-- Welcome Message -->
         <section class="intro">
@@ -21,49 +28,65 @@
             <div class="timeline-item">
                 <span class="date">January 20, 2024</span>
                 <p>We met because of Reetz Ma'am suggesting coffee on Twitter. The beginning of something special. ☕️</p>
+                
+                <!-- Twitter Embed -->
+                <blockquote class="twitter-tweet">
+                    <p lang="en" dir="ltr">Grateful to Reetz Ma'am for suggesting this wonderful coffee meet-up! It was the start of something so special. ❤️☕️ #Coffee #LoveJourney</p>&mdash;            <blockquote class="twitter-tweet"><p lang="in" dir="ltr">its waanya 😂</p>&mdash; Ree (@reetzz_) <a href="https://twitter.com/reetzz_/status/1749082149117206936?ref_src=twsrc%5Etfw">January 21, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>      </blockquote>
             </div>
+
             <div class="timeline-item">
                 <span class="date">February 2024</span>
                 <p>Our wholesome, perfect days, filled with love and excitement for what the future holds. 🌸</p>
             </div>
+
             <div class="timeline-item">
                 <span class="date">July 2024</span>
                 <p>A difficult month, but we got through it together, stronger than before. 💪</p>
             </div>
         </section>
 
-        <!-- Passion Section: Maanya's Hobbies -->
-        <section class="passions">
-            <h2>Things You Love</h2>
-            <div class="passion-item">
-                <h3>Microbiology 🔬</h3>
-                <p>You're the smartest microbiologist out there! Your work at Clarivate is amazing!</p>
+        <!-- Special Moments Section -->
+        <section class="special-moments">
+            <h2>Special Moments</h2>
+            <div class="moment-item">
+                <p>Cooking sessions where you made me realize just how amazing you are in the kitchen. 🍲👩‍🍳</p>
             </div>
-            <div class="passion-item">
-                <h3>Cooking 🍳</h3>
-                <p>Whether you're cooking for your family or experimenting in the kitchen, your love for cooking shows in everything you do.</p>
+            <div class="moment-item">
+                <p>Listening to Tamil songs together while you work from home and help your parents. 🎶🏡</p>
             </div>
-            <div class="passion-item">
-                <h3>Calligraphy ✍️</h3>
-                <p>Your beautiful strokes in calligraphy make everything more artistic and meaningful.</p>
+            <div class="moment-item">
+                <p>Watching CSK games and cheering for Dhoni. Your love for cricket is inspiring. 🏏💛</p>
             </div>
-            <div class="passion-item">
-                <h3>Tamil Classical Music 🎶</h3>
-                <p>Your voice in classical music is beautiful, and Tamil songs fill your soul with joy.</p>
+            <div class="moment-item">
+                <p>Stargazing plans in December 2024 – I can't wait for you to enjoy the beauty of the stars. 🌟🌙</p>
             </div>
         </section>
 
-        <!-- Shared Dreams Section -->
-        <section class="dreams">
-            <h2>Our Shared Dreams</h2>
-            <p>I don't know if our parents will accept us or not, but I know that no matter what, we'll face it together. Here's to our future and many more moments of love and happiness.</p>
-            <p>Don't forget your exciting star-gazing trip in December 2024 in Andaman – I'll be thinking of you under the same stars. 🌙✨</p>
+        <!-- Things We Love Section -->
+        <section class="things-we-love">
+            <h2>Things We Love</h2>
+            <ul>
+                <li>Classical music – your voice is beautiful. 🎤</li>
+                <li>Snoopy – how adorable! 🐶</li>
+                <li>Varanasi and its cultural beauty. 🏞️</li>
+                <li>Calligraphy – your talent shines through your beautiful work. ✍️</li>
+                <li>Traditional Tamil clothes – you look so gorgeous in them. 👗</li>
+                <li>The Moon – the way it reflects our dreams. 🌕</li>
+            </ul>
         </section>
 
-        <!-- Special Message Section -->
-        <section class="message">
-            <h2>A Special Letter to You</h2>
-            <p id="typewriter"></p>
+        <!-- Messages Section -->
+        <section class="messages">
+            <h2>Messages for You</h2>
+            <div class="message-item">
+                <p>No matter the challenges, you’ve always supported me. I’m forever grateful for you forgiving my mistakes. ❤️</p>
+            </div>
+            <div class="message-item">
+                <p>Your strength during difficult months, especially in July, made me admire you even more. You are amazing! 💪</p>
+            </div>
+            <div class="message-item">
+                <p>From WFH to helping your parents, you juggle everything so gracefully. I'm so proud of you! 🌟</p>
+            </div>
         </section>
 
         <!-- Footer -->
